--- a/projet.html
+++ b/projet.html
@@ -40,19 +40,15 @@
     <section class="hero" id="accueil">
         <div class="hero-content">
             <h1 class="hero-title">Mon Projet Personnel</h1>
-            <p class="hero-subtitle">Une aventure entrepreneuriale transformatrice</p>
+            <p class="hero-subtitle">Une aventure en temps que admisseur transformatrice</p>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">18</span>
-                    <span class="stat-label">Mois de développement</span>
+                    <span class="stat-number">3</span>
+                    <span class="stat-label">semaine de travaille</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">5</span>
-                    <span class="stat-label">Technologies maîtrisées</span>
-                </div>
-                <div class="stat">
-                    <span class="stat-number">1000</span>
-                    <span class="stat-label">Heures investies</span>
+                    <span class="stat-number">+2000</span>
+                    <span class="stat-label">étudiants rencontrés</span>
                 </div>
             </div>
         </div>
@@ -71,11 +67,17 @@
                 <div class="description-creative">
                     <div class="description-main">
                         <div class="description-text">
-                            <h3>L'Innovation au Service de l'Humain</h3>
-                            <p>Mon projet personnel s'articule autour du développement d'une plateforme digitale révolutionnaire qui repense l'interaction entre les utilisateurs et la technologie. Cette initiative, née d'une passion pour l'innovation et d'une volonté de créer un impact positif, combine expertise technique et vision entrepreneuriale.</p>
-                            
-                            <p>Au cœur de ce projet se trouve une approche centrée sur l'utilisateur, où chaque fonctionnalité a été pensée pour simplifier le quotidien et créer de la valeur ajoutée. L'aventure a débuté par une phase d'analyse approfondie du marché, suivie d'un développement itératif basé sur les retours utilisateurs.</p>
-                        </div>
+                            <h3>Faire les Admissibles c'est quoi ?</h3>
+                            <p>Dans le cadre de ma mission au sein de NEOMA Business School, j’ai participé à l’organisation et à l’animation de la période des oraux d’admission, communément appelée "faire les admissibles". Cette période est cruciale dans le processus de recrutement des futurs étudiants, notamment en post-bac via les concours d’entrée.</p>
+
+                            <p>Durant mon contrat, j’ai été affecté au pôle logistique dans le cadre de la campagne d’accueil des candidats admissibles à NEOMA Business School. Cette mission, essentielle à la bonne organisation des épreuves orales d’admission, s’est déroulée sur plusieurs semaines et mobilisait une équipe étudiante dédiée.</p>
+
+                            <p>L’équipe comprenait environ 40 étudiants, issus de différents programmes et années d’études, répartis selon une structure hiérarchique bien définie : </p>
+
+                            <p>Deux responsables généraux étaient en charge de la coordination globale du dispositif. Ils assuraient la liaison directe avec l’administration de NEOMA et l’équipe en charge du recrutement.</p>
+
+                            <p>Plusieurs responsables de pôles encadraient les différents domaines d’activité : logistique, animation, communication et back office. Chaque responsable de pôle supervisait une équipe opérationnelle et veillait au bon déroulement des missions spécifiques à son domaine.</p>           
+                            </div>
                         <div class="description-visual">
                             <div class="visual-element">
                                 <div class="floating-icon">💡</div>
