--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="service-card">
                 <h3>Mon Stage</h3>
                 <p class="subtitle">Information, Feedback, Analyse du stage,  transformation digitale et technologique ainsi que Fiches métier et interviews.</p>
-                <button class="service-btn">Consulter</button>
+                <a href="stage.html"><button class="service-btn">Consulter</button></a>
                 <div class="service-image">💡</div>
             </div>
             
