--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="profile-card">
             <div class="profile-content">
                 <div class="profile-text">
-                    <h2>Résumer du stage</h2>
+                    <h2>Résumé du stage</h2>
                     <p>Le stage se déroule sur la période du 1/06/2025 au 30/08/2025, au Decathlon de Grosley dans le 76,</p>
-                    <p>le Tuteur de stage: Fabien Fernandez Leader Decathlon val d'oise pour les rayons Sport Colectifs et sport d'eau.</p>
+                    <p>le Tuteur de stage: Fabien Fernandez Leader Decathlon val d'oise pour les rayons Sports Colectifs et sports d'eau.</p>
                 </div>
                 <div class="profile-image"></div>
             </div>
@@ -37,8 +37,8 @@
     <section class="section-3" id="section3">
         <div class="cards-container">
             <div class="service-card">
-                <h3>L'entreprise d'Ecathlon</h3>
-                <p class="subtitle">Présentation de l'entreprise : activité, secteur, historique, organisation, pratiques principales.</p>
+                <h3>L'entreprise Decathlon</h3>
+                <p class="subtitle">Présentation de l'entreprise : activités, secteur, historique, organisation, pratiques principales.</p>
                 <a href="entreprise.html"><button class="service-btn">Explorer</button></a>
                 <div class="service-image">🏃‍♂️</div>
             </div>
