--- a/stage.html
+++ b/stage.html
@@ -456,36 +456,25 @@
     </section>
 
     <!-- Section Interview -->
-    <section id="interview" class="section section-alt">
-        <div class="container">
-            <h2 class="section-title">Interview de mes collègues</h2>
-            <div class="interview-grid">
-                <div class="interview-card">
-                    <div class="interview-header">
-                        <h3>Sarah Martinez</h3>
-                        <p class="role">Responsable Rayon Running</p>
-                    </div>
-                    <div class="interview-content">
-                        <blockquote>
-                            "Ce qui me passionne le plus dans mon métier, c'est d'accompagner chaque client dans sa pratique sportive. Voir un débutant prendre confiance grâce aux bons équipements, c'est ma plus belle récompense. Chez Decathlon, on ne vend pas juste des produits, on transmet une passion pour le sport."
-                        </blockquote>
-                    </div>
+<section id="interview" class="section section-alt">
+    <div class="container">
+        <h2 class="section-title">Interview de mes collègues</h2>
+        <div class="interview-container">
+            <div class="interview-video-card">
+                <div class="interview-header">
+                    <h3>Directeur magasin</h3>
+                    <p class="interviewer-name">Maxime Droupy</p>
                 </div>
-                <div class="interview-card">
-                    <div class="interview-header">
-                        <h3>Thomas Dubois</h3>
-                        <p class="role">Chef de Secteur Outdoor</p>
-                    </div>
-                    <div class="interview-content">
-                        <blockquote>
-                            "L'évolution digitale transforme notre métier au quotidien. Nos nouvelles applications mobiles nous permettent d'être plus réactifs avec les clients et de mieux gérer nos stocks. C'est passionnant de voir comment la technologie améliore l'expérience en magasin tout en préservant le contact humain."
-                        </blockquote>
-                    </div>
+                <div class="video-container">
+                    <video controls class="interview-video">
+                        <source src="maxime1.mp4" type="video/mp4">
+                        <p>Votre navigateur ne prend pas en charge la lecture de vidéos HTML5.</p>
+                    </video>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
     <!-- Section Avis Clients -->
     <section id="avis-clients" class="section">
         <div class="container">
