--- a/entreprise.html
+++ b/entreprise.html
@@ -13,12 +13,11 @@
     <header class="header">
         <div class="container">
             <div class="nav-brand">
-                <img src="https://logo.decathlon.fr/logo-decathlon-bleu.svg" alt="Decathlon Logo" class="logo">
                 <span class="brand-text">Rapport de Stage</span>
             </div>
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link active">Accueil</a>
-                <a href="#" class="nav-link">Mon Stage</a>
+                <a href="stage.html" class="nav-link">Mon Stage</a>
                 <a href="projet.html" class="nav-link">Mon Projet Personnel</a>
             </nav>
         </div>
@@ -306,9 +305,9 @@
                 <div class="footer-section">
                     <h4>Navigation</h4>
                     <ul>
-                        <li><a href="#">Accueil</a></li>
-                        <li><a href="#">Mon Stage</a></li>
-                        <li><a href="#">Mon Projet Personnel</a></li>
+                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="stage.html">Mon Stage</a></li>
+                        <li><a href="projet.html">Mon Projet Personnel</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
