--- a/projet.html
+++ b/projet.html
@@ -18,7 +18,7 @@
             </div>
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link active">Accueil</a>
-                 <a href="#" class="nav-link">Mon Stage</a>
+                 <a href="stage.html" class="nav-link">Mon Stage</a>
                 <a href="projet.html" class="nav-link">Mon Projet Personnel</a>
             </nav>
         </div>
@@ -125,26 +125,26 @@
                     
                     <div class="pyramid-level level-3">
                         <div class="objective-card tertiary">
-                            <h5>Performance</h5>
+                            <h4>Performance</h4>
                             <p>Optimiser le fonctionnement quotidien :</p>
                                 <p>- fluidité dans les arrivées et départs.</p>
                                 <p>- accueil rapide et structuré.</p>
                                 <p>- réduction des temps d’attente et des erreurs logistiques.</p>
                         </div>
                         <div class="objective-card tertiary">
-                            <h5>Sécurité</h5>
+                            <h4>Sécurité</h4>
                             <p>Garantir un environnement sûr et bienveillant :</p>
                                 <p>- mise en place de règles claires pour l’accueil et les interactions.</p>
                         </div>
                         <div class="objective-card tertiary">
-                            <h5>Expérience candidat</h5>
+                            <h4>Expérience candidat</h4>
                             <p>Proposer une expérience chaleureuse et humaine :</p>
                                 <p>- ambiance conviviale et motivante dès l’arrivée.</p>
                                 <p>- interactions positives avec les admisseurs.</p>
                                 <p>- rassurer et mettre en confiance les candidats avant leurs oraux.</p>
                         </div>
                         <div class="objective-card tertiary">
-                            <h5>Évolutivité</h5>
+                            <h4>Évolutivité</h4>
                             <p>Améliorer le dispositif pour les futures campagnes :</p>
                                 <p>- récolter les retours des candidats.</p>
                         </div>
@@ -287,7 +287,7 @@
                         
                         <div class="trajectory-section">
                             <h4>🚀 Vision d'avenir</h4>
-                            <p>Cette expérience m’a conforté dans mon envie d’évoluer dans des environnements où l’humain, l’organisation et la communication occupent une place centrale. Elle m’a offert un aperçu concret du travail d’équipe, de la coordination sur le terrain, ainsi que de la gestion de projet.J’ai également eu l’opportunité d’être encadré par des étudiants plus expérimentés, ce qui m’a permis d’apprendre de leurs méthodes managériales. Cela m’a donné l’ambition de, demain, dépasser leurs pratiques et de développer ma propre approche du management humain, plus stratégique, structurée et fédératrice.À l’avenir, je souhaite m’orienter vers des fonctions intégrant la gestion de projets et la mise en œuvre de stratégies organisationnelles à fort impact.</p>
+                            <p>Cette expérience m’a conforté dans mon envie d’évoluer dans des environnements où l’humain, l’organisation et la communication occupent une place centrale. Elle m’a offert un aperçu concret du travail d’équipe, de la coordination sur le terrain, ainsi que de la gestion de projet. J’ai également eu l’opportunité d’être encadré par des étudiants plus expérimentés, ce qui m’a permis d’apprendre de leurs méthodes managériales. Cela m’a donné l’ambition de, demain, dépasser leurs pratiques et de développer ma propre approche du management humain, plus stratégique, structurée et fédératrice. À l’avenir, je souhaite m’orienter vers des fonctions intégrant la gestion de projets et la mise en œuvre de stratégies organisationnelles à fort impact.</p>
                         </div>
                     </div>
                 </div>
