--- a/entreprise.html
+++ b/entreprise.html
@@ -150,22 +150,22 @@
             </section>
 
             <!-- Section Organisation -->
-            <section id="organisation" class="content-section">
-                <div class="section-header">
-                    <h2 class="section-title">Organisation</h2>
-                    <div class="section-line"></div>
-                </div>
-                <div class="content-grid">
-                    <div class="content-card full-width">
-                        <div class="card-header">
-                            <h3>Structure de l'Entreprise</h3>
-                        </div>
-                        <div class="card-content">
+<section id="organisation" class="content-section">
+    <div class="section-header">
+        <h2 class="section-title">Organisation</h2>
+        <div class="section-line"></div>
+    </div>
+    <div class="content-grid">
+        <div class="content-card full-width">
+            <div class="card-header">
+                <h3>Structure de l'Entreprise</h3>
+            </div>
+            <div class="card-content">                            
                             <div class="org-structure">
                                 <div class="org-level">
                                     <div class="org-box leadership">
                                         <h4>Direction Générale</h4>
-                                        <p>Barbara Martin Coppola - CEO</p>
+                                        <p>Javier López - CEO</p>
                                     </div>
                                 </div>
                                 <div class="org-level">
@@ -185,22 +185,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="content-card">
-                        <div class="card-header">
-                            <h3>Actionnariat</h3>
+                    <!-- NOUVEAU: Container pour les 2 cartes du bas -->
+        <div class="bottom-cards-container">
+            <div class="content-card">
+                <div class="card-header">
+                    <h3>Actionnariat</h3>
                         </div>
                         <div class="card-content">
                             <p>Decathlon n'est pas cotée en bourse et reste une entreprise familiale :</p>
                             <ul class="feature-list">
-                                <li><strong>Famille Leclercq</strong> : ~40% (fondateurs)</li>
                                 <li><strong>Famille Mulliez</strong> : Actionnaire majoritaire</li>
+                                <li><strong>Famille Leclercq</strong> : ~40% (fondateurs)</li>
                                 <li><strong>Collaborateurs</strong> : Participation au capital</li>
                             </ul>
                         </div>
                     </div>
                     <div class="content-card">
-                        <div class="card-header">
-                            <h3>Marques du Groupe</h3>
+                <div class="card-header">
+                    <h3>Marques du Groupe</h3>
                         </div>
                         <div class="card-content">
                             <div class="brands-grid">
@@ -284,10 +286,6 @@
                     <div class="stat-card">
                         <div class="stat-number">85%</div>
                         <div class="stat-label">de marques propres</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number">160M€</div>
-                        <div class="stat-label">Investissement France 2024</div>
                     </div>
                 </div>
             </section>
